--- a/package.json
+++ b/package.json
@@ -4,15 +4,31 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "start": "node server.js"
   },
   "devDependencies": {
     "parcel": "^2.6.2"
   },
   "dependencies": {
     "@cubejs-client/core": "^0.31.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.0.0",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "date-fns": "^4.1.0"
-  }
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "express": "^5.1.0"
+  },
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AtmosJonesLab/AtmosJonesLab.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/AtmosJonesLab/AtmosJonesLab.github.io/issues"
+  },
+  "homepage": "https://github.com/AtmosJonesLab/AtmosJonesLab.github.io#readme",
+  "description": ""
 }
