--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   },
   "main": "server.js",
   "repository": {
