--- a/.github/workflows/update-sheet.yml
+++ b/.github/workflows/update-sheet.yml
@@ -74,5 +74,5 @@ jobs:
           git commit -m "Update data.json from Google Sheets" || echo "No changes to commit"
           git push
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
   
