--- a/.github/workflows/update-sheet.yml
+++ b/.github/workflows/update-sheet.yml
@@ -74,6 +74,7 @@ jobs:
           git config user.email github-actions@github.com
           git add data.json
           git commit -m "Update data.json from Google Sheets" || echo "No changes to commit"
+          git config --unset-all credential.helper || true
           git remote set-url origin https://x-access-token:${PERSONAL_ACCESS_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git remote -v
           echo "PAT length: ${#PERSONAL_ACCESS_TOKEN}"
