--- a/.github/workflows/update-sheet.yml
+++ b/.github/workflows/update-sheet.yml
@@ -1,9 +1,9 @@
 name: Update Google Sheet Data Daily
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   schedule:
     - cron: '0 6 * * *'  # every day at 6 AM UTC
   workflow_dispatch:
