--- a/.github/workflows/update-sheet.yml
+++ b/.github/workflows/update-sheet.yml
@@ -5,7 +5,7 @@ on:
   #   branches:
   #     - main
   schedule:
-    - cron: '0 10 * * *'  # every day at 6 AM UTC
+    - cron: '0 10 * * *' 
   workflow_dispatch:
 
 jobs:
