--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -1,6 +1,9 @@
 name: Update Weather Data Daily
 
 on:
+  push:
+   branches:
+      - main
   schedule:
     - cron: '0 10 * * *'  
   workflow_dispatch:
