--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -1,11 +1,8 @@
 name: Update Weather Data Daily
 
 on:
-  push:
-   branches:
-      - main
   schedule:
-    - cron: '0 10 * * *'  
+    - cron: '0 3 * * *' # Runs every day at 3 AM UTC
   workflow_dispatch:
 
 jobs:
@@ -21,13 +18,64 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Install dependencies
+    - name: Install node-fetch
       run: npm install node-fetch@2
+
+    - name: Create updateWeather.js script
+      run: |
+        mkdir -p .github/scripts
+        cat << 'EOF' > .github/scripts/updateWeather.js
+        const fs = require('fs');
+        const fetch = require('node-fetch');
+
+        const FILE_PATH = 'weather_data.json';
+        const API_URL = 'https://script.google.com/macros/s/AKfycbyVt7ckVjdY4MmYsAiMIowGTLqNgQ3LwI-E2S_bRkqWCHDmLNedaX2q1LCyd_SPFw/exec';
+
+        (async () => {
+          try {
+            const res = await fetch(API_URL);
+            const json = await res.json();
+
+            const sensor = json.sensors.find(
+              s => s.sensor_type === 53 && s.data_structure_type === 7
+            );
+
+            if (!sensor || !Array.isArray(sensor.data)) {
+              throw new Error("Valid weather sensor data not found.");
+            }
+
+            const newData = sensor.data.map(d => ({
+             ts: d.ts,
+            temp_out: d.temp_out,
+            hum_out: d.hum_out,
+            rainfall_mm: d.rainfall_mm,
+            solar_rad_avg: d.solar_rad_avg,
+            }));
+
+            const file = fs.existsSync(FILE_PATH)
+              ? JSON.parse(fs.readFileSync(FILE_PATH, 'utf8'))
+              : [];
+
+            const allData = [...file, ...newData].reduce((acc, entry) => {
+              acc[entry.ts] = entry;
+              return acc;
+            }, {});
+
+            const merged = Object.values(allData).sort((a, b) => a.ts - b.ts);
+
+            fs.writeFileSync(FILE_PATH, JSON.stringify(merged, null, 2));
+            console.log(\`Appended \${newData.length} entries.\`);
+          } catch (err) {
+            console.error("Error fetching or updating weather data:", err);
+            process.exit(1);
+          }
+        })();
+        EOF
 
     - name: Run update script
       run: node .github/scripts/updateWeather.js
 
-    - name: Commit and push if changes
+    - name: Commit and push if changed
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
