--- a/.github/workflows/update_weather.yml
+++ b/.github/workflows/update_weather.yml
@@ -1,9 +1,13 @@
 name: Update Weather Data Daily
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: '0 3 * * *' # Runs every day at 3 AM UTC
+    - cron: '0 10 * * *' 
   workflow_dispatch:
+
 
 jobs:
   update-weather:
