--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "node-fetch": "^3.3.2"
   },
   "main": "server.js",
